--- a/src/styles/base.css
+++ b/src/styles/base.css
@@ -11,6 +11,11 @@
     background-color: var(--color-bg);
   }
 
+  body {
+    background-color: var(--color-bg);
+    color: var(--color-fg);
+  }
+
   :is(html.dark, html[data-theme='dark']) {
     color-scheme: dark;
   }
